# Physics-2024-25-Summer

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  rerun_all.sh  search.html
Electromagnetism/: Circuits.html  Electromagnetism.html
Electromagnetism/Electromagnetism/: index.html
Electromagnetism/Kirchhoff_laws/: index.html
Electromagnetism/rlc_circuit/: index.html
Electromagnetism/solar_wind/: index.html
Exercises_for_Students/What_to_deliver/: index.html
Exercises_for_Students/exercises/: index.html
Exercises_for_Students/exercises_/: index.html
Exercises_for_Students/exercises_dch/: index.html
Experiments_Statistics/: Measurement.html  Statistics.html
Experiments_Statistics/estimation_of_pi/: index.html
Experiments_Statistics/intro_to_stats/: index.html
Lecture_notes/: Circuits.qmd  Cosmology.qmd  Electromagnetism.qmd  Language_of_physics.qmd  Measurement.qmd  Mechanics copy.html  Mechanics copy.qmd  Mechanics.html  Mechanics.qmd  Quantum_mechanics.qmd  Statistic.qmd  Statistics.html  Statistics.qmd  Vector_Field.md  Waves.qmd  custom.scss  custom_copy.scss  styles.css  vf.html
Lecture_notes/py_src/: wave_gif.py
Mechanics/: Language_of_physics.html  Mechanics.html  Waves.html
Mechanics/chuas_circuit/: index.html
Mechanics/double_pendulum_trajectories/: index.html
Modern_Physics/: Cosmology.html  Quantum_mechanics.html
docs/: index.md
sandbox/: Cuircuits.html  Cuircuits.qmd  Lecture_plan.md  New_theme.html  New_theme.qmd  styles.css  wave.ipynb  wave_.html
search/: search_index.json
(+44 files in other folders)
